# lowboy

./: .editorconfig  .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs  esbuild.mjs  justfile  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
.cargo/: config.toml
examples/demo/: .env.template  .gitattributes  .gitignore  Cargo.toml  build.rs  diesel.toml  esbuild.mjs  justfile  package-lock.json  package.json
examples/demo/migrations/2024-11-05-195552_create_post_table/: up.sql
examples/demo/migrations/2024-11-17-010618_create_user_profile_table/: down.sql  up.sql
examples/demo/migrations/2024-11-17-010618_create_user_table/: down.sql  up.sql
examples/demo/migrations/2024-11-17-010622_create_post_table/: up.sql
examples/demo/src/: app.rs  main.rs  schema.rs
examples/demo/src/controller/: auth.rs  home.rs  mod.rs  post.rs
examples/demo/src/form/: register.rs
examples/demo/src/model/: credentials.rs  mod.rs  post.rs  user.rs  user_data.rs  user_profile.rs
examples/demo/src/view/: auth.rs  error.rs  home.rs  layout.rs  login.rs  mod.rs  post.rs  post_form.rs  register.rs
examples/demo/templates/: layout.html
examples/demo/templates/components/: alert-success.html  alert-warning.html  alerts.html  footer.html  header.html  post.html
examples/demo/templates/pages/: home.html  login.html
examples/demo/templates/pages/auth/: login.html  register.html
examples/demo/templates/pages/error/: index.html
examples/demo/ts/types/: global.d.ts
lib/lowboy_record/: Cargo.toml
lib/lowboy_record/src/: lib.rs
lib/lowboy_record/tests/: lib.rs
migrations/: 20241102184648_create_user_table.sql  20241102184652_create_post_table.sql  20241103000623_add_credentials_to_user.sql
migrations/2024-11-05-195543_create_user_table/: down.sql  up.sql
migrations/2024-11-05-195548_create_user_data_table/: down.sql  up.sql
migrations/2024-11-05-195552_create_post_table/: down.sql
migrations/2024-11-17-010334_create_lowboy_user_table/: down.sql  up.sql
migrations/2024-11-17-010334_create_user_table/: up.sql
migrations/2024-12-08-160602_create_email_table/: down.sql  up.sql
migrations/2024-12-08-164757_create_token_table/: down.sql  up.sql
migrations/2024-12-17-235312_create_permissions_tables/: down.sql  up.sql
src/: app.rs  auth.rs  cli.rs  config.rs  context.rs  diesel_sqlite_session_store.rs  error.rs  extract.rs  extractor.rs  lib.rs  mailer.rs  main.rs  post.rs  schema.rs  user.rs
src/controller/: auth.rs  events.rs  home.rs  mod.rs  post.rs  sun_guy.rs
src/model/: credentials.rs  email.rs  id.rs  mod.rs  permission.rs  post.rs  role.rs  token.rs  unverified_email.rs  user.rs  user_data.rs
src/view/: home.rs  layout.rs  login.rs  mod.rs  post.rs  post_form.rs  register.rs  sun_guy.rs
templates/: base.html.jinja  hello.html  index.html  index.html.jinja  layout.html
templates/components/: alert-error.html  alert-info.html  alerts.html  footer.html  full-screen-modal.html  header.html  new-post.html  post-form.html  post.html
templates/pages/: home.html  login.html  register.html  sun-guy.html
ts/: main.ts
