[package]
name = "stackin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
askama = { git = "https://github.com/djc/askama", features = ["with-axum"] }
askama_axum = { git = "https://github.com/djc/askama" }
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
fake = { version = "3.0.0", features = ["derive"] }
flume = "0.11.1"
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xdg = "2.5.2"

[build-dependencies]
anyhow = "1.0.92"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.41.0", features = ["full"] }
