[package]
name = "lowboy"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[workspace]
members = ["examples/demo", "lib/lowboy_record"]

[dependencies]
anyhow = "1.0.92"
async-stream = "0.3.6"
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-login = "0.16.0"
axum-messages = "0.7.0"
base64 = "0.22.1"
chrono = "0.4.38"
confique = { version = "0.3.0", features = ["yaml"] }
deadpool = "0.12.1"
deadpool-diesel = { version = "0.6.1", features = [
    "sqlite",
    "serde",
    "tracing",
] }
derive-masked = "0.1.0"
derive_more = { version = "1.0.0", features = ["debug", "display"] }
diesel = { version = "2.2.4", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
] }
diesel-async = { version = "0.5.1", features = ["deadpool", "pool", "sqlite"] }
diesel-tracing = { git = "https://github.com/marcaddeo/diesel-tracing", branch = "feat/diesel-instrumentation-module-support", features = [
    "sqlite",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dyn-clone = "1.0.17"
fake = { version = "3.0.0", features = ["derive"] }
flume = "0.11.1"
futures = "0.3.31"
gravatar_api = "0.3.0"
lowboy_record = { version = "0.1.0", path = "lib/lowboy_record" }
mopa = "0.2.2"
notify = "7.0.0"
oauth2 = "4.4.2"
password-auth = "1.0.0"
reqwest = { version = "0.12.9", features = ["json"] }
rinja = "0.3.5"
rinja_axum = "0.3.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.214", features = ["serde_derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.1"
tokio = { version = "1.41.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["english"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tower-livereload = "0.9.4"
tower-sessions = { version = "0.13.0", features = ["signed"] }
tower-sessions-core = { version = "0.13.0", features = ["deletion-task"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typetag = "0.2.18"
validator = { version = "0.19.0", features = ["derive"] }
xdg = "2.5.2"

[build-dependencies]
anyhow = "1.0.92"
vergen-gitcl = "1.0.1"
